# dftkit

./: AGENTS.md  POSCAR  STRU  pyproject.toml  symmetry.yaml
examples/: CPOSCAR  KPOINTS  PPOSCAR  SPOSCAR  kpath.yaml  symmetry.yaml
src/dftkit/: __init__.py  __main__.py  cli.py  config.py  interactive.py  models.py  registry.py  ui.py
src/dftkit/operations/: __init__.py
src/dftkit/operations/abacus/: __init__.py  task_102_structure_info.py  task_201_poscar_to_stru_convert.py  task_202_poscar_to_stru_swap_ac_convert.py
src/dftkit/operations/alamode/: __init__.py  kpath.py
src/dftkit/operations/gpumd/: __init__.py  structure.py
src/dftkit/operations/shengbte/: __init__.py
src/dftkit/operations/vasp/: __init__.py  cutoff.py  kpath.py  kpoints.py  structure.py  task_001_kpoints_mesh.py  task_002_band_kpoints_prepare.py  task_102_structure_info.py  task_103_primitive_standardize.py  task_104_conventional_standardize.py  task_105_supercell_build.py  task_106_cutoff_radii.py  task_108_stacking_grid.py  task_112_bilayer_build.py  task_201_stru_to_poscar_convert.py
src/dftkit/providers/: __init__.py  abacus.py  alamode.py  gpumd.py  shengbte.py  vasp.py
src/dftkit/schemas/: __init__.py
src/dftkit/schemas/abacus/: __init__.py  file_conversion.py  structure.py  structure_analysis.py
src/dftkit/schemas/alamode/: __init__.py
src/dftkit/schemas/gpumd/: __init__.py  kpath.py
src/dftkit/schemas/shengbte/: __init__.py
tests/: test_abacus_201_poscar_to_stru_convert.py  test_cutoff_radii.py  test_vasp_112_bilayer_build.py  test_wigner_seitz.py
(+7 files in other folders)
